[tool.poetry]
name = "timewarrior-extensions"
version = "0.1.0"
description = "Extensions for Timewarrior"
authors = ["Viliam Valent <viliam@valent.email>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line_length = 110
